--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-hover-animation": "^2.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.2",
     "typewriter-effect": "^2.17.0",
     "web-vitals": "^1.1.1"
   },
