--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.2",
+    "react-select": "^4.3.0",
     "typewriter-effect": "^2.17.0",
     "web-vitals": "^1.1.1"
   },
