--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.2",
     "react-select": "^4.3.0",
+    "react-visibility-sensor": "^5.1.1",
     "typewriter-effect": "^2.17.0",
     "web-vitals": "^1.1.1"
   },
